# mom

./: .gitignore  index.html  package.json  readme.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  models.py
backend/app/accounts/: router.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/core/: audit.py  config.py  database.py  security.py
backend/app/meetings/: __init__.py  router.py  schemas.py
backend/app/offices/: codegen.py
backend/app/registrations/: router.py  schemas.py
backend/app/scripts/: add_indexes.py  init_db.py  seed.py  verify_meetings.py  verify_workflow.py
backend/mom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: auth.md  readme.md
frontend/: eslint.config.js  package-lock.json
frontend/src/: MomApp.tsx  main.tsx  mockData.ts
frontend/src/api/: admin.ts  auth.ts  meetings.ts
frontend/src/components/: Common.tsx  OfficeTreeComponents.tsx
frontend/src/pages/: AuthPage.tsx  CreateMeeting.tsx  Hierarchy.tsx  LandingPage.tsx  MeetingDetail.tsx  MeetingList.tsx  Offices.tsx  SubmitSummary.tsx  Users.tsx
frontend/src/utils/: printPdf.ts  tree.ts
src/: App.tsx  MomApp.tsx  mockData.ts  style.css  types.ts
src/components/: Common.tsx  OfficeTreeComponents.tsx
src/pages/: CreateMeeting.tsx  Dashboard.tsx  Hierarchy.tsx  LandingPage.tsx  MeetingDetail.tsx  MeetingList.tsx  Offices.tsx  SubmitSummary.tsx  Users.tsx
