[project]
name = "mom-backend"
version = "0.1.0"
description = "FastAPI backend for the MoM platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.1.0",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.0",
  "pydantic-settings>=2.6.0",
  "pyjwt>=2.9.0",
  "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
